az.template
{
  "AWSTemplateFormatVersion": "2010-09-09",
  "Description": "vpc for tool",
  "Parameters": {
    "AZ": { "Type": "AWS::EC2::AvailabilityZone::Name" },
    "VPC": { "Type": "AWS::EC2::VPC::Id" },
    "PublicSubnetCidrBlock":  { "Type": "String", "Default": "172.16.0.0/24", "AllowedPattern": "(\\d{1,3})\\.(\\d{1,3})\\.(\\d{1,3})\\.(\\d{1,3})\\/(\\d{1,2})", "ConstraintDescription": "Pattern a.b.c.d/e" },
    "PrivateSubnetCidrBlock": { "Type": "String", "Default": "172.16.1.0/24", "AllowedPattern": "(\\d{1,3})\\.(\\d{1,3})\\.(\\d{1,3})\\.(\\d{1,3})\\/(\\d{1,2})", "ConstraintDescription": "Pattern a.b.c.d/e" },
    "InternetGateway": { "Type": "String", "Default": "igw-xxxxxxxx" }
  },
  "Resources": {
    "Dopt":           { "Type": "AWS::EC2::DHCPOptions",                  "Properties": { "Tags": [ { "Key": "Name", "Value": "tool-dopt" } ], "DomainName": "ap-northeast-1.compute.internal", "DomainNameServers": [ "AmazonProvidedDNS" ] } },
    "VPCDoptAs":      { "Type": "AWS::EC2::VPCDHCPOptionsAssociation",    "Properties": { "VpcId": { "Ref": "VPC" }, "DhcpOptionsId": { "Ref": "Dopt" } } },
    "PrvSub":         { "Type": "AWS::EC2::Subnet",                       "Properties": { "VpcId": { "Ref": "VPC" }, "CidrBlock": { "Ref": "PublicSubnetCidrBlock" }, "AvailabilityZone": "ap-northeast-1a", "Tags": [ { "Key": "Name", "Value": "PrvSub" } ] } },
    "PubSub":         { "Type": "AWS::EC2::Subnet",                       "Properties": { "VpcId": { "Ref": "VPC" }, "CidrBlock": { "Ref": "PrivateSubnetCidrBlock" }, "AvailabilityZone": "ap-northeast-1a", "Tags": [ { "Key": "Name", "Value": "PubSub" } ] } },
    "NatEip":         { "Type": "AWS::EC2::EIP",                          "Properties": { "Domain": "vpc" } },
    "NatGW":          { "Type": "AWS::EC2::NatGateway",                   "Properties": { "AllocationId": { "Fn::GetAtt": ["NatEip", "AllocationId"]}, "SubnetId": { "Ref": "PubSub"} } },
    "PubRouteTbl":    { "Type": "AWS::EC2::RouteTable",                   "Properties": { "VpcId": { "Ref": "VPC" }, "Tags": [ { "Key": "Name", "Value": "tool-pub-route" } ] } },
    "PrvRouteTbl":    { "Type": "AWS::EC2::RouteTable",                   "Properties": { "VpcId": { "Ref": "VPC" }, "Tags": [ { "Key": "Name", "Value": "tool-prv-route" } ] } },
    "PubSubRouteAs":  { "Type": "AWS::EC2::SubnetRouteTableAssociation",  "Properties": { "RouteTableId": { "Ref": "PubRouteTbl" }, "SubnetId": { "Ref": "PubSub" } } },
    "PrvSubRouteAs":  { "Type": "AWS::EC2::SubnetRouteTableAssociation",  "Properties": { "RouteTableId": { "Ref": "PrvRouteTbl" }, "SubnetId": { "Ref": "PrvSub" } } },
    "PubRoute":       { "Type": "AWS::EC2::Route",                        "Properties": { "RouteTableId": { "Ref": "PubRouteTbl" }, "DestinationCidrBlock": "0.0.0.0/0", "GatewayId": { "Ref": "InternetGateway" } } },
    "PrvRoute":       { "Type": "AWS::EC2::Route",                        "Properties": { "RouteTableId": { "Ref": "PrvRouteTbl" }, "DestinationCidrBlock": "0.0.0.0/0", "NatGatewayId": { "Ref": "NatGW" } } }
  }
}
